2015-11-10  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-362
	
	* Files added under "controlfiles/*":  Adds simple testcase to ensure 
	NLTE code does not break.  In slow tests. The atmosphere is not realistic.
	May move to fast in reduced form once more tested.
	
	* src/methods.cc:  Fixed bug affecting DebRelease users due to an error
	of mine from before.  Release users were not affected by
	abs_lines_per_species being passed only as output from 
	(nlteSetByQuantumIdentifiers).
	
	* Other files altered under "src/*":  Update comments on NLTE part after 
	request by Taka and Jana.

2015-11-10  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-361

	* src/CMakeLists.txt:

	Fix compilation on systems without gfortran. Removed hardcoded gfortran
	library from matpack link libraries. We don't want to have a hard
	dependency on gfortran.

2015-11-06  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-360
	
	* src/{{constants,m_jacobians}.cc,partial_derivatives.{h,cc}}:  Added
	support for line mixing partial derivatives.
	
	* src/{linemixingdata.{cc,h},absorption.cc}:  Added methods to calculate
	internal partial derivatives as a function of the catalog of choice.
	
	* sec/methods.cc:  Updated documentation for (jacobianAddCatalogParameter).

2015-11-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* arts-2-3-360

	* tools/vim_syntax/update-vim-arts-syntax:

	Set commenstring variable to properly work with commentary.vim plugin.

2015-11-04  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-359
	
	* src/{linescaling.{cc,h},partial_derivatives}.cc:  I forgot the NLTE 
	implementation for central frequency changes.  Now added.  ARTS still
	will throw a fit if Jacobians are used with NLTE activated, but at least
	now it might work when properly implemented.

2015-11-04  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-358
	
	* src/methods.cc:  Updated description so people know how to activate
	the variable.
