@@ -1,3 +1,13 @@
+2015-11-18  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-363
+	
+	* src/m_sensor.cc (f_gridFromSensorAMSU, f_gridFromSensorHIRS):
+
+	Use nlinspace instead of linspace. The generated grid might otherwise
+	end up one value short due to numerical inaccuracies.
+	Fixes bug reported by Max Schaper.
+
 2015-11-10  Richard Larsson   <ric.larsson@gmail.com>
 
 	* arts-2-3-362
